--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-App-component
-<hr>
-<app-server></app-server>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>App-component</h3>
+      <hr>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
+
