step '21. Combining all Forms of Databinding'

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>{{'Server'}} with ID {{serverId}} is {{getSetverStatus()}}</p>
+<p>{{'Server'}} with ID {{serverId}} is {{getServerStatus()}}</p>
