--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,21 @@
-<button class="btn btn-primary"
-        [disabled]="!allowNewServer">Add Server
+<label for="server-name">Server Name</label>
+<!--<input-->
+  <!--type="text"-->
+  <!--class="form-control"-->
+  <!--(input)="onUpdateServerName($event)">-->
+<input
+  id="server-name"
+  type="text"
+  class="form-control"
+  [(ngModel)]="serverName">
+<!--<p>{{serverName}}</p>-->
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()">Add Server
 </button>
-
+<div class="alert alert-info" role="alert">
+  {{serverCreationStatus}}
+</div>
 <app-server></app-server>
 <app-server></app-server>
