--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -14,8 +14,7 @@
   [disabled]="!allowNewServer"
   (click)="onCreateServer()">Add Server
 </button>
-<div class="alert alert-info" role="alert">
-  {{serverCreationStatus}}
-</div>
+  <!--{{serverCreationStatus}}-->
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
